@@ -124,7 +124,7 @@ A) OVERVIEW
 	gimp-print-devel@lists.sourceforge.net
 
 	================================================================
-	  Release: gutenprint 5.2.8 generated on 02 Mar 2011
+	  Release: gutenprint 5.2.8-pre1 generated on 26 Dec 2011
 
 	  Features:
 	    Build CUPS:                                 yes, installing in /usr
@@ -144,6 +144,7 @@ A) OVERVIEW
 
 	  Installation summary:
 	    Installation prefix:                        /usr/local
+	    Exec prefix:                                ${prefix}
 	    Data directory:                             /usr/local/share/gutenprint
 	    Library directory:                          /usr/local/lib/gutenprint
 	    XML data directory:                         /usr/local/share/gutenprint/5.2/xml
@@ -160,7 +161,7 @@ A) OVERVIEW
 	    Generate debugging symbols:                 no
 	    Use modules:                                static
 	    Use readline libraries:                     yes, extra arguments: -lncurses
-	    uname -a output:                            Linux dsl092-065-009 2.6.27.45-0.1-default #1 SMP 2010-02-22 16:49:47 +0100 x86_64 x86_64 x86_64 GNU/Linux
+	    uname -a output:                            Linux dsl092-065-009 3.1.0-1.2-default #1 SMP Thu Nov 3 14:45:45 UTC 2011 (187dde0) x86_64 x86_64 x86_64 GNU/Linux
 	================================================================
 
     The CUPS, GIMP, Foomatic, and Ghostscript components require that
